# lst-bot

./: .env.example  README.md  README.zh-Hans.md  justfile  prek.toml  pyproject.toml
app/: agent.py  general.py  main.py  question.py  rooms.py
pkgs/bot/: pyproject.toml
pkgs/bot/src/bot/: __init__.py
pkgs/bot/src/bot/core/: __init__.py  bot.py  di.py  scheduler.py
pkgs/bot/src/bot/gateways/: __init__.py  base.py  onebot11.py  onebot12.py
pkgs/bot/src/bot/protocol/: __init__.py  actions.py  base.py  common.py  constants.py  enums.py  events.py  field.py  msg.py  returns.py
pkgs/bot/src/bot/routing/: __init__.py  cmd.py  route.py  router.py  rule.py
pkgs/bot/tests/: conftest.py
pkgs/bot/tests/core/: test_bot.py  test_dispatch.py  test_scheduler.py
pkgs/bot/tests/gateways/: support.py  test_base.py
pkgs/bot/tests/gateways/onebot11/: support.py  test_action.py  test_http_webhook.py  test_websocket.py
pkgs/bot/tests/gateways/onebot12/: support.py  test_action.py  test_http_webhook.py  test_websocket.py
pkgs/bot/tests/protocol/: support.py  test_actions.py  test_common.py  test_events.py  test_messages.py
pkgs/bot/tests/routing/: test_router.py
pkgs/hitokoto/: pyproject.toml
pkgs/hitokoto/src/hitokoto/: __init__.py  cache.py  client.py  enums.py  models.py
pkgs/hitokoto/tests/: hitokoto_support.py  test_hitokoto.py
pkgs/klei/: pyproject.toml
pkgs/klei/src/klei/: __init__.py  client.py  enums.py  models.py
pkgs/klei/tests/: test_klei.py  test_klei_forum.py
pkgs/lst/: pyproject.toml
pkgs/lst/src/lst/: __init__.py  client.py  config.py
pkgs/lst/tests/: test_lst.py
src/lst_bot/: agent.py  general.py  main.py  question.py  rooms.py  settings.py
systemd/: lst-bot.service  napcat.container
tests/app/: test_logging.py
